--- a/src/_admin/assets/sass/components/_variables.custom.scss
+++ b/src/_admin/assets/sass/components/_variables.custom.scss
@@ -9,10 +9,10 @@ $white: #ffffff;
 
 // Theme colors
 // Primary
-$primary: #01807b;
-$primary-active: #01807b;
-$primary-light: #80bfbc;
-$primary-light-dark: #212e48;
+$primary: #4466c4;
+$primary-active: #87b8fd;
+$primary-light: #99c0f6;
+$primary-light-dark: #2148b1;
 $primary-inverse: $white;
 
 // Secondary
