--- a/src/_admin/assets/sass/core/components/_variables-dark.scss
+++ b/src/_admin/assets/sass/core/components/_variables-dark.scss
@@ -7,13 +7,13 @@
 
 $gray-100-dark:  #1B1C22 !default;
 $gray-200-dark:  #26272F !default;
-$gray-300-dark:  #363843 !default;
+$gray-300-dark:  #405fb3 !default;
 $gray-400-dark:  #464852 !default;
-$gray-500-dark:  #636674 !default;
+$gray-500-dark:  #001b94 !default;
 $gray-600-dark:  #808290 !default;
-$gray-700-dark:  #9A9CAE !default;
+$gray-700-dark:  #1c3d97 !default;
 $gray-800-dark:  #B5B7C8 !default;
-$gray-900-dark:  #F5F5F5 !default;
+$gray-900-dark:  #2f4fa4 !default;
 
 $grays-dark: (
 	"100": $gray-100-dark,
@@ -47,9 +47,9 @@ $secondary-inverse-dark:			$white !default;
 
 // Light colors
 $light-dark: 						$gray-100-dark !default;
-$light-active-dark: 				#1F212A !default;
-$light-light-dark: 					#1F212A !default;
-$light-clarity-dark: 				rgba(31, 33, 42, 0.20) !default;
+$light-active-dark: 				#ffffff !default;
+$light-light-dark: 					#ffffff !default;
+$light-clarity-dark: 				rgba(255, 255, 255, 0.2) !default;
 $light-inverse-dark:				$gray-600-dark !default;
 
 // Success colors
