info design completed

--- a/src/_admin/assets/sass/core/components/_variables.scss
+++ b/src/_admin/assets/sass/core/components/_variables.scss
@@ -50,7 +50,7 @@ $grays: (
 
 // Bootstrap contextual colors
 // Primary colors
-$primary:						#01807b !default;
+$primary:						#010e80 !default;
 $primary-active:				#01807b !default;
 $primary-light: 				#80bfbc !default;
 $primary-clarity: 				rgba(#01807b, 0.2) !default;
